--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -1772,6 +1772,25 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 82: Mar 22 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            Security+ <br><br>
+            <a href="https://app.hackthebox.com/machines/359" target="_blank">BountyHunter</a> : HackTheBox <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p>
+            <a href="https://infosecwriteups.com/top-ethical-hacking-tools-and-software-for-2022-1abba4bcaf76" target="_blank">Top Ethical Hacking Tools and Software for 2022</a> : Surendra Choudhury <br><br>
+            <a href="https://medium.com/@interc3pt3r/for-the-first-bounty-it-takes-a-few-challenging-months-but-only-a-few-days-for-the-second-7b53259b0199" target="_blank">For the first Bounty, it takes a few challenging months, but only a few days for the second.</a> : Aneesha D <br><br>
+            <a href="https://medium.com/@vamshivaran110/my-first-blind-sql-injection-7db4b5e5c66d" target="_blank">My First Blind SQL Injection</a> : T VAMSHI <br><br>
+            <a href="https://medium.com/@The_Real_Ryan/the-basics-of-pentesting-81c302676fb5" target="_blank">The Basics of Pentesting</a> : Ryan <br><br>
+            <a href="https://mehmetyavuzyagis.medium.com/bypassing-passwords-by-reverse-engineering-1e4abbcc64de" target="_blank">Bypassing Passwords Through Reverse Engineering</a> : Mehmet Yavuz Yağış <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
