--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -1791,6 +1791,26 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 83: Mar 23 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://app.hackthebox.com/machines/359" target="_blank">BountyHunter</a> : HackTheBox <br><br>
+            <a href="https://academy.hackthebox.com/module/details/74" target="_blank">Introduction to Active Directory</a> : HackTheBox Academy <br><br>
+            Security+ <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p>
+            <a href="https://yevhsec1.medium.com/oscp-preparation-ee5a4d16dc7f" target="_blank">OSCP Preparation</a> : YevhSec1 <br><br>
+            <a href="https://medium.com/@vamshivaran110/sensitive-information-disclosure-through-unrestricted-directories-82b720994f36" target="_blank">Sensitive Information disclosure through unrestricted Directories</a> : T VAMSHI <br><br>
+            <a href="https://falkensmaze.medium.com/how-to-not-be-a-script-kiddie-in-2022-d1aed6d51aeb" taget="_blank">How to not be a script kiddie in 2022</a> : Falken Smaze <br><br>
+            <a href="https://infosecwriteups.com/how-i-created-an-undetectable-backdoor-for-windows-ethical-hacking-d26e40a0ec" target="_blank">How I created an undetectable Backdoor for Windows — Ethical Hacking</a> : Gourav Dhar <br><br>
+            <a href="https://yevhsec1.medium.com/pivoting-oscp-chisel-proxychains-d901dd50d40" target="_blank">Pivoting OSCP: Chisel & Proxychains</a> : YevhSec1 <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
