--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -1811,6 +1811,27 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 84: Mar 24 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://academy.hackthebox.com/module/details/74" target="_blank">Introduction to Active Directory</a> : HackTheBox Academy <br><br>
+            <a href="https://app.hackthebox.com/machines/400" target="_blank">Antique</a> : HackTheBox <br><br>
+            <a href="https://tryhackme.com/room/securityawarenessintro" target="_blank">Security Awareness</a> : TryHackMe <br><br>
+            Security+ <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p>
+            <a href="https://tutorialboy24.medium.com/a-brief-analysis-of-saas-paas-and-iaas-of-enterprise-cloud-services-21bda01a109e" target="_blank">A Brief Analysis of Saas, PaaS, and IaaS of Enterprise Cloud Services</a> : TutorialBoy <br><br>
+            <a href="https://pathakabhi24.medium.com/cyber-security-career-roadmap-2021-e18164738ca4" target="_blank">Cyber Security Career Roadmap 2021</a> : Abhinav Pathak <br><br>
+            <a href="https://wahaz.medium.com/broken-authentication-and-idor-at-redacted-646de8d508e6" target="_blank">($$$) Broken Authentication and IDOR at [REDACTED]</a> : Rizaldi Wahaz <br><br>
+            <a href="https://rootissh.in/hackers-find-a-new-way-to-make-malware-undetected-on-windows-bdd37ce86f63" target="_blank">Hackers find a new way to make Malware Undetected on Windows</a> : rootissh <br><br>
+            <a href="https://yevhsec1.medium.com/buffer-overflow-preparation-for-oscp-6c5a7f72cf88" target="_blank">Buffer Overflow Preparation for OSCP</a> : YevhSec1 <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
