--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -61,9 +61,7 @@
                 <a href="#week9">Week 9</a>
                 <a href="#week10">Week 10</a>
                 <a href="#week11">Week 11</a>
-                <!--
-                <a href="#week8">Week 12</a>
-                -->
+                <a href="#week12">Week 12</a>
               </div>
             </div>
           </li>
@@ -1791,6 +1789,7 @@
         <br><br>
       </p>
       <br><br>
+      <h2 id="week12">Week 12</h2> <br><br><br>
       <h3>Day 83: Mar 23 2022</h3><br>
       <p>
         <h5>My Activities</h5>
