--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -1831,6 +1831,33 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 85: Mar 25 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://academy.hackthebox.com/module/details/74" target="_blank">Introduction to Active Directory</a> : HackTheBox Academy <br><br>
+            NCAE Cyber Games
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p>
+            <a href="https://infosecwriteups.com/authentication-bypass-using-root-array-4a179242b9f7" target="_blank">Authentication bypass using root array</a> : Eslam Akl <br><br>
+            <a href="https://medium.com/dark-roast-security/cybersecurity-in-2022-what-to-focus-on-16ef41de76b9" target="_blank">Cybersecurity in 2022: What to Focus on</a> : Rishi on Security <br><br>
+            <a href="https://systemweakness.com/learning-how-to-ethical-hack-step-6-using-two-virtual-machines-to-practice-netcat-55abe449991d" target="_blank">Beginner’s Guide To Netcat for Hackers</a> HackTheBridge <br><br>
+            <a href="https://medium.com/@cortez.train/structuring-a-penetration-test-report-22c96ab692ba" target="_blank">Structuring a Penetration Test Report</a> : Ángel Cortez <br><br>
+            <a href="https://medium.com/@cortez.train/planning-your-first-ethical-hack-on-a-corporate-network-fd3c166c4c69" target="_blank">Planning Your First Ethical Hack on a Corporate Network</a> : Ángel Cortez <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
+      <h3>Day 86: March 26 2022</h3>
+      <p>
+        NCAE Cyber Games Competition <br><br>
+      </p>
+      <br><br>
+      <!--
+      <h3>Day 87: March 27 2022</h3>
+      -->
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
