--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -1836,7 +1836,7 @@
         <h5>My Activities</h5>
           <p>
             <a href="https://academy.hackthebox.com/module/details/74" target="_blank">Introduction to Active Directory</a> : HackTheBox Academy <br><br>
-            NCAE Cyber Games
+            NCAE Cyber Games <br><br>
           </p>
         <br><br>
         <h5>Blogs Reads</h5>
@@ -1855,9 +1855,19 @@
         NCAE Cyber Games Competition <br><br>
       </p>
       <br><br>
-      <!--
-      <h3>Day 87: March 27 2022</h3>
-      -->
+      <h3>Day 87: Mar 27 2022</h3><br>
+      <p>
+        <h5>Blogs Reads</h5>
+          <p>
+            <a href="https://namx05.medium.com/ejpt-journey-16304d9b9eaa" target="_blank">eJPT Journey</a> : Naman Jain <br><br>
+            <a href="https://medium.com/@daanstormvanleeuwen/how-i-beat-the-new-oscp-exam-but-nearly-failed-e9e0643fda50" target="_blank">How I Beat The New OSCP Exam (But Nearly Failed)</a> : Daan Storm van Leeuwen <br><br>
+            <a href="https://systemweakness.com/learning-how-to-ethical-hack-step-2-networking-fundamentals-3261584241ca" target="_blank">An Introduction to Networking for Hackers.</a> : HackTheBridge <br><br>
+            <a href="https://medium.com/emergent-phenomena/what-i-learnt-from-ranking-in-the-top-11-of-hackers-df1e8b5e1bb" target="_blank">What I learnt from ranking in the top 11% of hackers</a> : Skanda Vivek <br><br>
+            <a href="https://medium.com/purple-team/embedding-backdoor-into-pdf-files-1781dfce62b1" target="_blank">Embedding backdoor into PDF files</a> : David Artykov <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
