--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -1868,6 +1868,27 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 88: Mar 28 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://academy.hackthebox.com/module/details/77" target="_blank">Getting Started</a> : HackTheBox Academy <br><br>
+            <a href="https://nationalcyberleague.org/" target="_blank">The National Cyber League</a> <br><br>
+            <a href="https://app.hackthebox.com/machines/298" target="_blank">Laboratory</a> : HackTheBox <br><br>
+            Security+ <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p>
+            <a href="https://medium.com/@sys41x4/ejpt-experience-sys41x4-739d48f541bf" target="_blank">eJPT Experience [sys41x4]</a> : Arijit Bhowmick <br><br>
+            <a href="https://medium.com/@thenorsetech/less-than-6-months-195fc8e5be4d" target=_blank>Less than 6 months!?!</a> : Alexander Plog 🕵🏻💻🥷🏻 <br><br>
+            <a href="https://infosecwriteups.com/utctf-2022-writeup-de956bfe0bf3" target="_blank">UTCTF 2022 - Writeup</a> : Vishnuram Rajkumar <br><br>
+            <a href="https://kavigihan.medium.com/why-i-recommend-hackthebox-a9e5796f414e" target="_blank">Why I recommend Hackthebox</a> : Kavishka Gihan <br><br>
+            <a href="https://infosecwriteups.com/how-i-become-a-government-official-using-a-vulnerability-4605a2db47f0" target="_blank">How I Become a Government Official Using a Vulnerability.</a> : Krishnadev P Melevila <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
