--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -1889,6 +1889,25 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 89: Mar 29 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://academy.hackthebox.com/module/details/77" target="_blank">Getting Started</a> : HackTheBox Academy <br><br>
+            Security+ <br><br>
+            <a href="https://app.hackthebox.com/machines/156" target="_blank">Access</a> : HackTheBox <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p>
+            <a href="https://medium.com/geekculture/top-5-projects-to-do-on-a-raspberry-pi-2fa629681922" target="_blank">Top 5 projects to do on a Raspberry Pi</a> : Nuno Bispo <br><br>
+            <a href="https://medium.com/@Infected69/xss-using-response-manipulation-42812467fa6c" target="_blank">XSS using response manipulation.</a> : Jaspreet Singh 0xInfected <br><br>
+            <a href="https://medium.com/@j.poff/fastest-free-blue-team-home-lab-set-up-c625cfa99abd" target="_blank">Fastest Free Blue-Team Home Lab Set-Up</a> : Jeramiah Poff <br><br>
+            <a href="https://systemweakness.com/how-i-exploited-sql-injection-to-sql-shell-with-in-15-minutes-c3d847d2c632" target="_blank">How i exploited SQL Injection to SQL Shell within 15 minutes.</a> : Sahil Ojha🇳🇵 <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
