--- a/WebPages/activities.html
+++ b/WebPages/activities.html
@@ -35,7 +35,7 @@
   <center>
     <div class="container text-white">
       <div class="des">
-        <img src="/img/pyrus.jpg" class="img-fluid round"> <br>
+        <img src="/img/Insta.png" class="img-fluid round"> <br>
         <h1>Activities / Interests</h1> <br>
       </div> 
       <hr>
