--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <center>
     <div class="container text-white">
       <div class="des">
-        <img src="/img/pyrus.jpg" class="img-fluid round"> <br>
+        <img src="/img/Insta.png" class="img-fluid round"> <br><br>
         <h1>Aditya Dindi</h1> <br>
         <small class="text-muted lead"><strong>Security Researcher at <a href="https://hackersarcade.com/" class="text-decoration-none" target="_blank">Hackers Arcade</strong></a></small> <br>
         <p class="lead">I am a Cyber Security Student at the University of Texas at San Antonio </p> <br>
