--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <img src="/img/Insta.png" class="img-fluid round"> <br><br>
         <h1>Aditya Dindi</h1> <br>
         <small class="text-muted lead"><strong>Security Researcher at <a href="https://hackersarcade.com/" class="text-decoration-none" target="_blank">Hackers Arcade</strong></a></small> <br>
-        <p class="lead">I am a Cyber Security Student at the University of Texas at San Antonio </p> <br>
+        <p class="lead">Cyber Security Student at the University of Texas at San Antonio </p> <br>
         <a class="btn btn-outline-light" href="/WebPages/AdityaDindiResume.pdf" role="button">MY RESUME</a>
       </div> 
       <hr>
