--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
         <h1>Aditya Dindi</h1> <br>
         <small class="text-muted lead"><strong>Security Researcher at <a href="https://hackersarcade.com/" class="text-decoration-none" target="_blank">Hackers Arcade</strong></a></small> <br>
         <p class="lead">Cyber Security Student at the University of Texas at San Antonio </p> <br>
-        <a class="btn btn-outline-light" href="/WebPages/AdityaDindiResume.pdf" role="button">MY RESUME</a>
-      </div> 
+        <a class="btn btn-outline-light" href="/WebPages/AdityaDindiResume.pdf" role="button">MY RESUME</a><br><br><br><br>
+        <a href="https://www.linkedin.com/in/adityadindi/" target="_blank"><img src="/img/linkedln-img.png" class="img-fluid round" style="width:50px; height:50px"></a>&nbsp;<a href="https://github.com/Pyrus369" target="_blank"><img src="/img/github-img.png" class="img-fluid round" style="width:50px; height:50px"></a><a href="https://twitter.com/Pyrus369" target="_blank"><img src="/img/twitter-img.png" class="img-fluid round" style="width:50px; height:50px"></a><br><br><br><br>
       <h1 id="projects" style="color:DodgerBlue">PROJECTS</h1> <br>
       <small class="text-muted lead"><strong><!--<a href="/" class="text-decoration-none" target="_blank">-->Cyber Security Homelab</strong></a></small> <br><br>
       <small class="text-muted lead"><strong><a href="https://hackersarcade.medium.com/noobs-guide-to-web-application-penetration-testing-e3ae921d57d1" class="text-decoration-none" target="_blank">Web Application Hacking Guide</strong></a></small> <br><br>
@@ -66,22 +66,22 @@
         It also involves security research and working on different projects that helps advance the cyber security community. 
         Hackers Arcade contributed and is consistently contributing to the cybersecurity community by constantly teaching and uploading cybersecurity related content.
       </p>
+      <!--
       <p class="lead" style="color:MediumSeaGreen"><strong>(2019 - 2020) Data Center Technician</strong></p>
       <p>
         Monitored the server center and constantly updated, fixed, maintained and patched technology within the data center. Fixed and maintained all
         school computers on a weekly basis. Helped keep all computer systems in the school available with little to no downtime.
       </p>
+      -->
       <br><br>
       <h1 id="skills" style="color:DodgerBlue">MY SKILLS</h1> <br>
       <p class="lead">Web Application Hacking</p>
       <p class="lead">Problem-Solving Skills</p>
       <p class="lead">Working in a Team</p>
       <p class="lead">Communication Skills</p>
-      <br>
-      <hr>
-      <br>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
-
+      </div>
     </div>
   </center>
 
