--- a/WebPages/activities.html
+++ b/WebPages/activities.html
@@ -25,7 +25,7 @@
             <a class="nav-link" href="#tryhackme">TryHackMe</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#utsa-cyber-range">UTSA Cyber Range</a>
+            <a class="nav-link" href="#hackthebox">HackTheBox</a>
           </li>
         </ul>
       </div>
@@ -35,57 +35,26 @@
   <center>
     <div class="container text-white">
       <div class="des">
-        <img src="/img/Insta.png" class="img-fluid round"> <br>
-        <h1>Activities / Interests</h1> <br>
-      </div> 
-      <hr>
+        <img src="/img/Insta.png" class="img-fluid round"> <br><br><br>
+        <h1>Activities / Interests</h1> <br><br>
       <h1 id="tryhackme" style="color:DodgerBlue">TryHackMe</h1><br>
-      <h2 id="tryhackme">Profile</h2> <br>
-      <img src="/img/THM-Rank.png" alt="THM-Ranks" width="1400" height="400"> <br>
-      <br>
+      <script src="https://tryhackme.com/badge/198437"></script>
+      <br><br>
+      <!--
       <h2 id="tryhackme">Certificates</h2> <br>
       <img src="/img/THM-PreSecurity.png" alt="Pre-Security" width="600" height="300"> 
       <img src="/img/THM-WebFundamentals.png" alt="Web-Fundamentals" width="600" height="300"> 
       <img src="/img/THM-AdventOfCyber.png" alt="Advent-Of-Cyber" width="600" height="300"> 
+      -->
+      <h1 id="hackthebox" style="color:DodgerBlue">HackTheBox</h1><br>
+      <a href="https://app.hackthebox.com/users/settings/475018" target="_blank"><img src="/img/hackthebox-profile.png" alt="HackTheBox Profile"></a>
       <br>
-      <hr>
-      <h1 id="utsa-cyber-range" style="color:DodgerBlue">UTSA Cyber Range </h1><br>
-      <p>
-        <strong> Read-World </strong> Network <br>
-        <strong> Real-World </strong> Security tools <br>
-        <strong> Real-World </strong> Simulated Attacks <br>
-      </p>
-      <a href="https://business.utsa.edu/cyber-range/" target="_blank">
-        <img alt="Cyber-Range" src="/img/Cyber-Range-Network.png">
-      </a>
-      <br>
-      <br>
-      <h4>Tools Used</h4>
-      <p>
-        <strong>Firewall:</strong> SmartConsole <br>
-        <strong>Security Information Management (SIM):</strong> ArcSight Console <br>
-        <strong>Security Information and Event Management (SIEM):</strong> Zenoss Core <br>
-      </p>
-      <br>
-      <p>
-        The UTSA Cyber Rnage is a virtualized corporate netework with over 60 components including application, database and email servers, as well as workstations and simulated internet segment. The virtual SOC (Security Operation Center) features market-leading security products to provide hands-on experience with the same tools cyher security analysts use on job. 
-      </p>
-      <p>
-        Copyright © 2021 The University of Texas at San Antonio
-      </p>
-      <br>
-      <hr>
-      <br>
-      <h1 id="skills"></h1> <br>
-      <p class="lead"></p>
-      <p class="lead"></p>
-      <br>
-
-      <br>
+      </div>
+      <br><br><br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
-
     </div>
   </center>
+  
 
     <!-- Optional JavaScript; choose one of the two! -->
 
