--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -1908,6 +1908,23 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 90: Mar 30 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p>
+            <a href="https://as745591.medium.com/introduction-to-penetration-list-68f7cfbef9cb" target="_blank">Introduction To Penetration-List</a> : Albus Security <br><br>
+            <a href="https://cyb3rwulfengrav.medium.com/one-month-bug-bounty-journey-update-9f6f0e3549d2" target="_blank">One Month Bug Bounty Journey Update</a> : lostsoulofawolf <br><br>
+            <a href="https://trevorsaudi.medium.com/africahackon-2021-ctf-finals-8111f8edc408" target="_blank">AfricaHackon 2021 CTF Finals</a> : Trevor saudi <br><br>
+            
+          </p>
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
