--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <small class="text-muted lead"><strong><a href="https://github.com/Pyrus369/CyberSecurityProjects" class="text-decoration-none" target="_blank">CyberSecurity Projects using Python</strong></a></small> <br><br>
       <small class="text-muted lead"><strong><a href="https://github.com/Pyrus369/Python-Programming" class="text-decoration-none" target="_blank">Python Programming</strong></a></small> <br><br>
       <br><br>
-      <h1 id="work-exp" style="color:DodgerBlue">WORK EXPERIENCE</h1> <br>
+      <h1 id="work-exp" style="color:DodgerBlue">EXPERIENCE</h1> <br>
       <p class="lead" style="color:red"><strong>(2021 - Current) Security Researcher at Hackers Arcade</strong></p>
       <p>
         Hackers Arcade is an online platform where you can learn about cyber security through excellent learning resources and challenges. 
