--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -1912,7 +1912,9 @@
       <p>
         <h5>My Activities</h5>
           <p>
-
+            <a href="https://business.utsa.edu/cyber-range/" target="_blank">UTSA Cyber Range Session</a> <br><br>
+            Computer Security Association Meeting <br><br>
+            Nettitude CTF <br><br>
           </p>
         <br><br>
         <h5>Blogs Reads</h5>
@@ -1920,6 +1922,7 @@
             <a href="https://as745591.medium.com/introduction-to-penetration-list-68f7cfbef9cb" target="_blank">Introduction To Penetration-List</a> : Albus Security <br><br>
             <a href="https://cyb3rwulfengrav.medium.com/one-month-bug-bounty-journey-update-9f6f0e3549d2" target="_blank">One Month Bug Bounty Journey Update</a> : lostsoulofawolf <br><br>
             <a href="https://trevorsaudi.medium.com/africahackon-2021-ctf-finals-8111f8edc408" target="_blank">AfricaHackon 2021 CTF Finals</a> : Trevor saudi <br><br>
+            <a href="https://medium.com/math-simplified/what-is-zero-knowledge-proof-a2c43216bd3d" target="_blank"></a>
           </p>
         <br><br>
       </p>
