--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -32,7 +32,7 @@
       </button>
       <div class="collapse navbar-collapse justify-content-left" id="navbar">
         <ul class="navbar-nav">
-          <li>
+          <li class="nav-item">
             <div class="dropdown">
               <button class="dropbtn">January</button>
               <div class="dropdown-content">
@@ -43,7 +43,7 @@
               </div>
             </div>
           </li>
-          <li>
+          <li class="nav-item">
             <div class="dropdown">
               <button class="dropbtn">February</button>
               <div class="dropdown-content">
@@ -54,7 +54,7 @@
               </div>
             </div>
           </li>
-          <li>
+          <li class="nav-item">
             <div class="dropdown">
               <button class="dropbtn">March</button>
               <div class="dropdown-content">
@@ -1922,7 +1922,23 @@
             <a href="https://as745591.medium.com/introduction-to-penetration-list-68f7cfbef9cb" target="_blank">Introduction To Penetration-List</a> : Albus Security <br><br>
             <a href="https://cyb3rwulfengrav.medium.com/one-month-bug-bounty-journey-update-9f6f0e3549d2" target="_blank">One Month Bug Bounty Journey Update</a> : lostsoulofawolf <br><br>
             <a href="https://trevorsaudi.medium.com/africahackon-2021-ctf-finals-8111f8edc408" target="_blank">AfricaHackon 2021 CTF Finals</a> : Trevor saudi <br><br>
-            <a href="https://medium.com/math-simplified/what-is-zero-knowledge-proof-a2c43216bd3d" target="_blank"></a>
+            <a href="https://medium.com/math-simplified/what-is-zero-knowledge-proof-a2c43216bd3d" target="_blank">What is Zero-Knowledge Proof?</a> : Bahuguna <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
+      <h3>Day 91: Mar 31 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p>
+            <a href="https://medium.com/@turkishhoodie010/veil-framework-creating-rat-195634b0fa87" target="_blank">VEIL FRAMEWORK(creating RAT)</a> : Ahmet Göker <br><br>
+            <a href="https://cybersamarth.medium.com/the-worlds-first-digital-war-has-just-begun-must-read-e508c01a1d21" target="_blank">The World’s First Digital War has just begun! — must read.</a> : J Sai Samarth <br><br>
+            
           </p>
         <br><br>
       </p>
