--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -1931,14 +1931,19 @@
       <p>
         <h5>My Activities</h5>
           <p>
-
+            <a href="https://academy.hackthebox.com/module/details/77" target="_blank">Getting Started</a> : HackTheBox Academy <br><br>
+            Security+ <br><br>
+            <a href="https://app.hackthebox.com/machines/156" target="_blank">Access</a> : HackTheBox <br><br>
+            <a href="https://nationalcyberleague.org/" target="_blank">The National Cyber League</a> <br><br>
           </p>
         <br><br>
         <h5>Blogs Reads</h5>
           <p>
             <a href="https://medium.com/@turkishhoodie010/veil-framework-creating-rat-195634b0fa87" target="_blank">VEIL FRAMEWORK(creating RAT)</a> : Ahmet Göker <br><br>
             <a href="https://cybersamarth.medium.com/the-worlds-first-digital-war-has-just-begun-must-read-e508c01a1d21" target="_blank">The World’s First Digital War has just begun! — must read.</a> : J Sai Samarth <br><br>
-            
+            <a href="https://infosecwriteups.com/browser-in-the-browser-bitb-a-new-born-phishing-methodology-81687c586f1b" target="_blank">Browser-in-the Browser (BITB) — A New Born Phishing Methodology</a> : WeSecureApp <br><br>
+            <a href="https://vamshi-vemula.medium.com/how-i-got-my-first-bounty-open-redirect-80832e5bf4e6" target="_blank">How I got my First Bounty (Open Redirect)</a> : Vamshi Vemula <br><br>
+            <a href="https://musyokaian.medium.com/buffer-overflow-2-picoctf-2022-590cf7b7961f" target="_blank">Buffer Overflow 2 : picoCTF 2022</a> : Musyoka Ian <br><br>
           </p>
         <br><br>
       </p>
