--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -65,8 +65,28 @@
               </div>
             </div>
           </li>
+          <li class="nav-item">
+            <div class="dropdown">
+              <button class="dropbtn">April</button>
+              <div class="dropdown-content">
+                <a href="#week13">Week 13</a>
+                <!--
+                <a href="#week10">Week 10</a>
+                <a href="#week11">Week 11</a>
+                <a href="#week12">Week 12</a>
+                -->
+              </div>
+            </div>
+          </li>
         </ul>
       </div>
+      <div class="collapse navbar-collapse" id="navbar">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <strong><a href="daily-2022.html">Back To The Top</a></strong>
+          </li>
+        </ul> 
+      </div> 
     </div>
   </nav>
   <br>
@@ -74,7 +94,7 @@
     <div class="container text-white">
       <div class="des">
         <br><br><br>
-        <h1 id="tryhackme" style="color:DodgerBlue">Daily Hacking Challenge</h1><br>
+        <h1 id="top" style="color:DodgerBlue">Daily Hacking Challenge</h1><br>
         <hr>
         <h2 id="week1">Week 1</h2> <br><br><br>
         <h3>Day 1: Jan 1 2022</h3><br>
@@ -1932,7 +1952,6 @@
         <h5>My Activities</h5>
           <p>
             <a href="https://academy.hackthebox.com/module/details/77" target="_blank">Getting Started</a> : HackTheBox Academy <br><br>
-            Security+ <br><br>
             <a href="https://app.hackthebox.com/machines/156" target="_blank">Access</a> : HackTheBox <br><br>
             <a href="https://nationalcyberleague.org/" target="_blank">The National Cyber League</a> <br><br>
           </p>
@@ -1944,6 +1963,26 @@
             <a href="https://infosecwriteups.com/browser-in-the-browser-bitb-a-new-born-phishing-methodology-81687c586f1b" target="_blank">Browser-in-the Browser (BITB) — A New Born Phishing Methodology</a> : WeSecureApp <br><br>
             <a href="https://vamshi-vemula.medium.com/how-i-got-my-first-bounty-open-redirect-80832e5bf4e6" target="_blank">How I got my First Bounty (Open Redirect)</a> : Vamshi Vemula <br><br>
             <a href="https://musyokaian.medium.com/buffer-overflow-2-picoctf-2022-590cf7b7961f" target="_blank">Buffer Overflow 2 : picoCTF 2022</a> : Musyoka Ian <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
+      <h2 id="week13">Week 13</h2> <br><br><br>
+      <h3>Day 92: April 1 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://academy.hackthebox.com/module/details/77" target="_blank">Getting Started</a> : HackTheBox Academy <br><br>
+            <a href="https://app.hackthebox.com/machines/156" target="_blank">Access</a> : HackTheBox <br><br>
+            <a href="https://academy.hackthebox.com/module/details/74" target="_blank">Introduction to Active Directory</a> : HackTheBox Academy <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p>
+            <a href="https://janmuhammadzaidi.medium.com/how-i-bypassed-403-forbidden-domain-using-a-simple-trick-c2d538de04b8" target="_blank">How I bypassed 403 forbidden domain using a simple trick</a> : Jan Muhammad Zaidi <br><br>
+            <a href="https://debprasadbanerjee502.medium.com/google-dork-for-instant-bounties-a332764fc3e2" target="_blank">Google Dork for instant bounties</a> : Debprasad Banerjee <br><br>
+            <a href="https://debprasadbanerjee502.medium.com/cybersecurity-bible-the-5-rules-for-every-beginner-652309ced97" target="_blank">Cybersecurity Bible: The 5 rules for every beginner.</a> : Debprasad Banerjee <br><br>
+            <a href="https://medium.com/pentesternepal/my-oscp-journey-70f1bab4d8f6" target="_blank">My OSCP Journey!</a> : Imtodess <br><br>
           </p>
         <br><br>
       </p>
