--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -1987,6 +1987,25 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 93: April 2 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://academy.hackthebox.com/module/details/74" target="_blank">Introduction to Active Directory</a> : HackTheBox Academy <br><br>
+            Security+ <br><br>
+            <a href="https://app.hackthebox.com/machines/165" target="_blank">Teacher</a> : HackTheBox <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p>
+            <a href="https://infosecwriteups.com/otp-bypass-and-account-takeover-at-redacted-hospital-a49253411212" target="_blank">OTP Bypass and Account Takeover at <Redacted>Hospital</a> : Krishnadev P Melevila <br><br>
+            <a href="https://genyxp.com/cybersecurity-basics-you-need-to-know-ac2c69ad3848" target="_blank">Cybersecurity Basics You Need to Know</a> : Raj Bains <br><br>
+            <a href="https://medium.com/@kemalfurkanaraci/what-is-xxe-vulnerability-9536950d8270" target="_blank">What is XXE vulnerability?</a> : kemalfurkanaraci <br><br>
+            <a href="https://0daypapi.medium.com/i-scanned-the-whole-country-of-israel-for-git-exposed-repositories-a70804002291" target="_blank">I scanned the whole country of Israel for git exposed repositories</a> : Ranel Zipor סקיד <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
