--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -2027,6 +2027,29 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 95: April 4 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://app.hackthebox.com/machines/142" target="_blank">Bounty</a> : HackTheBox <br><br>
+            <a href="https://nationalcyberleague.org/" target="_blank">The National Cyber League</a> <br><br>
+            Security+ <br><br>
+            <a href="https://academy.hackthebox.com/module/34" target="_blank">Introduction to Networking</a> : HackTheBox Academy <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p>
+            <a href="https://medium.com/@dprice_theblogger/my-first-year-as-a-pentester-241f0eb52c73" target="_blank">My First Year As a Pentester</a> : DPrice_TheBlogger <br><br>
+            <a href="https://medium.com/@dprice_theblogger/how-i-got-into-cybersecurity-how-you-can-too-17728a539e77" target="_blank">How I Got Into Cybersecurity & How You Can Too</a> : DPrice_TheBlogger <br><br>
+            <a href="https://n7ruzn.medium.com/im-a-web-application-penetration-testing-intern-e303347be287" target="_blank">I’m A Web Application Penetration Testing- Intern</a> : THE NEURO DIVERGENT HACKER <br><br>
+            <a href="https://medium.com/@mrempy/cross-site-scripting-xss-via-image-rendering-application-f8427afe746d" target="_blank">Cross-Site Scripting (XSS) via image rendering application</a> : Mr Empy <br><br>
+            <a href="https://infosecwriteups.com/finding-vulnerable-info-using-google-dorks-ethical-hacking-23f358117ceb" target="_blank">Finding Vulnerable Info Using Google Dorks — Ethical Hacking</a> : Gourav Dhar <br><br>
+            <a href="https://infosecwriteups.com/what-is-distributed-tracing-and-how-does-it-work-f0bd6247e1f0" target="_blank">What is Distributed Tracing and How does it work?</a> : Securing Lit Limited <br><br>
+            <a href="https://0xparth.medium.com/how-i-was-able-collect-pii-of-all-users-36f59735d52e" target="_blank">How I was able collect PII of all users</a> : Parth Shukla <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
