--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
           <li class="nav-item">
             <a class="nav-link" href="/WebPages/daily-2022.html" target="_blank">DAILY</a>
           </li>
+          <!---
           <li class="nav-item">
             <a class="nav-link" href="#projects">PROJECTS</a>
           </li>
@@ -35,8 +36,12 @@
           <li class="nav-item">
             <a class="nav-link" href="#skills">SKILLS</a>
           </li>
+          -->
           <li class="nav-item">
             <a class="nav-link" href="/WebPages/activities.html" target="_blank">ACTIVITIES / INTERESTS</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/WebPages/competitions.html" target="_blank">COMPETITIONS</a>
           </li>
     </div>
   </nav>
