--- a/WebPages/competitions.html
+++ b/WebPages/competitions.html
@@ -41,7 +41,7 @@
       <p>
       Role: Captain <br><br>
       Placement: 3rd in Regionals <br><br>
-      Description: Captain of the University of Texas at San Antonio’s NCAE team. NCAE is a competition for college students where we learn about cyber
+      Captain of the University of Texas at San Antonio’s NCAE team. NCAE is a competition for college students where we learn about cyber
       competitions in an environment focused on teamwork, building confidence and growing our skills.
       <br></br>
       <a href="https://www.ncaecybergames.org/">
@@ -53,7 +53,7 @@
       <p>
       Role: Sub Member <br><br>
       Placement: 3rd in Southwest Regionals <br><br>
-      Description: Member of the University of Texas at San Antonio’s CCDC team that qualified for Regionals 2022. CCDC is a competition for college students
+      Member of the University of Texas at San Antonio’s CCDC team that qualified for Regionals 2022. CCDC is a competition for college students
       to demonstrate their technical and business skills by managing and protecting an existing stimulated corporate network infrastructure. The
       team was responsible for responding to business tasks while a live Professional Red team attempted to break into the systems.
       <br><br>
