--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -2033,7 +2033,6 @@
           <p>
             <a href="https://app.hackthebox.com/machines/142" target="_blank">Bounty</a> : HackTheBox <br><br>
             <a href="https://nationalcyberleague.org/" target="_blank">The National Cyber League</a> <br><br>
-            Security+ <br><br>
             <a href="https://academy.hackthebox.com/module/34" target="_blank">Introduction to Networking</a> : HackTheBox Academy <br><br>
           </p>
         <br><br>
@@ -2046,6 +2045,26 @@
             <a href="https://infosecwriteups.com/finding-vulnerable-info-using-google-dorks-ethical-hacking-23f358117ceb" target="_blank">Finding Vulnerable Info Using Google Dorks — Ethical Hacking</a> : Gourav Dhar <br><br>
             <a href="https://infosecwriteups.com/what-is-distributed-tracing-and-how-does-it-work-f0bd6247e1f0" target="_blank">What is Distributed Tracing and How does it work?</a> : Securing Lit Limited <br><br>
             <a href="https://0xparth.medium.com/how-i-was-able-collect-pii-of-all-users-36f59735d52e" target="_blank">How I was able collect PII of all users</a> : Parth Shukla <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
+      <h3>Day 96: April 5 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            NSA NCX Cyber Games <br><br>
+            <a href="https://academy.hackthebox.com/module/87" target="_blank">Setting Up</a> : HackTheBox Academy <br><br>
+            <a href="https://app.hackthebox.com/machines/195" target="_blank">Haystack</a> : HackTheBox <br><br>
+            Security+ <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p>
+            <a href="https://yashvardhantrip.medium.com/reconnaissance-is-the-key-to-success-8afb8b2fb9ca" target="_blank">Reconnaissance is the key to success !</a> : Yash Vardhan Tripathi <br><br>
+            <a href="https://medium.com/techiepedia/ctf-1337up-ctf-writeup-mirage-ca82f73c7175" target="_blank">[CTF] 1337up CTF writeup- Mirage</a> : Vyshakhari <br><br>
+            <a href="https://medium.com/techiepedia/response-manipulation-leads-to-account-takeover-e1a250acb003" target="_blank">Response Manipulation leads to Account Takeover</a> : MikeChan <br><br>
+            <a href="https://infosecwriteups.com/setup-armitage-as-a-command-control-c2-framework-for-free-bae590064817" target="_blank">Setup Armitage as a Command & Control (C2) Framework for Free</a> : Febi Mudiyanto <br><br>
           </p>
         <br><br>
       </p>
