--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -2053,7 +2053,7 @@
       <p>
         <h5>My Activities</h5>
           <p>
-            NSA NCX Cyber Games <br><br>
+            NSA NCX Cyber Exercise <br><br>
             <a href="https://academy.hackthebox.com/module/87" target="_blank">Setting Up</a> : HackTheBox Academy <br><br>
             <a href="https://app.hackthebox.com/machines/195" target="_blank">Haystack</a> : HackTheBox <br><br>
             Security+ <br><br>
