--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -30,7 +30,7 @@
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse justify-content-left" id="navbar">
+      <div class="collapse navbar-collapse justify-content-left" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
             <div class="dropdown">
