--- a/WebPages/competitions.html
+++ b/WebPages/competitions.html
@@ -49,7 +49,7 @@
       </a>
       </p>
       <br><br>
-      <h1 id="ccdc" style="color:DodgerBlue">Collegiate Cyber Defense Competition</h1><br>
+      <h1 id="ccdc" style="color:DodgerBlue">Collegiate Cyber Defense Competition 2022</h1><br>
       <p>
       Role: Sub Member <br><br>
       Result: 3rd in Southwest Regionals <br><br>
