--- a/WebPages/competitions.html
+++ b/WebPages/competitions.html
@@ -22,10 +22,10 @@
       <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="#ncaecybergames">NCAE Cyber Games</a>
+            <a class="nav-link" href="#universitycomps">University Competitions</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#ccdc">CCDC</a>
+            <a class="nav-link" href="#ctfs">CTF Competitions</a>
           </li>
         </ul>
       </div>
@@ -37,32 +37,129 @@
       <div class="des">
         <img src="/img/Insta.png" class="img-fluid round"> <br><br><br>
         <h1>Competitions</h1> <br><br>
-      <h1 id="ncaecybergames" style="color:DodgerBlue">NCAE Cyber Games 2022</h1><br>
-      <p>
-      Role: Captain <br><br>
-      Result: 3rd in Regionals <br><br>
-      Captain of the University of Texas at San Antonio’s NCAE team. NCAE is a competition for college students where we learn about cyber
-      competitions in an environment focused on teamwork, building confidence and growing our skills.
-      <br></br>
-      <a href="https://www.ncaecybergames.org/">
-        <img src="/img/ncae-cyber-games.png" alt="NCAE CYBER GAMES">
-      </a>
-      </p>
-      <br><br>
-      <h1 id="ccdc" style="color:DodgerBlue">Collegiate Cyber Defense Competition 2022</h1><br>
-      <p>
-      Role: Sub Member <br><br>
-      Result: 3rd in Southwest Regionals <br><br>
-      Member of the University of Texas at San Antonio’s CCDC team that qualified for Regionals 2022. CCDC is a competition for college students
-      to demonstrate their technical and business skills by managing and protecting an existing stimulated corporate network infrastructure. The
-      team was responsible for responding to business tasks while a live Professional Red team attempted to break into the systems.
-      <br><br>
-      <a href="https://www.nationalccdc.org/">
-        <img src="/img/ccdc.jfif" alt="CCDC">
-      </a>
-      <img src="/img/ccdc-trophy2.png" alt="CCDC" width="250" height="225">
-      </p>
-      <br>
+        <h2 id="universitycomps" style="color:red">University Competitions</h2><br><br>
+        <h1 style="color:DodgerBlue">NCAE Cyber Games 2022</h1><br>
+        <p>
+        Role: Captain <br><br>
+        Result: 3rd in Regionals <br><br>
+        Captain of the University of Texas at San Antonio’s NCAE team. NCAE is a competition for college students where we learn about cyber
+        competitions in an environment focused on teamwork, building confidence and growing our skills.
+        <br></br>
+        <a href="https://www.ncaecybergames.org/">
+          <img src="/img/ncae-cyber-games.png" alt="NCAE CYBER GAMES">
+        </a>
+        </p>
+        <br><br>
+        <h1 id="ccdc" style="color:DodgerBlue">Collegiate Cyber Defense Competition 2022</h1><br>
+        <p>
+        Role: Sub Member <br><br>
+        Result: 3rd in Southwest Regionals <br><br>
+        Member of the University of Texas at San Antonio’s CCDC team that qualified for Regionals 2022. CCDC is a competition for college students
+        to demonstrate their technical and business skills by managing and protecting an existing stimulated corporate network infrastructure. The
+        team was responsible for responding to business tasks while a live Professional Red team attempted to break into the systems.
+        <br><br>
+        <a href="https://www.nationalccdc.org/">
+          <img src="/img/ccdc.jfif" alt="CCDC">
+        </a>
+        <img src="/img/ccdc-trophy2.png" alt="CCDC" width="250" height="225">
+        </p>
+        <br><br><br><br>
+        <h2 id="ctfs" style="color:red">CTF Competitions</h2><br><br>
+        <h3 style="color:greenyellow"><strong>Team Name: <a href="https://ctftime.org/team/168545" class="text-decoration-none" target="_blank">Binary Banditz</strong></a></h3><br><br>
+        <table>
+          <style type="text/css">
+            td {
+              padding: 0 15px;
+              text-align: center;
+              color: whitesmoke;
+            }
+            tr { 
+              padding: 0 15px;
+              text-align: center;
+            }
+            table, th, td {
+              padding: 5px;
+            }
+            table {
+              border-spacing: 15px;
+            }
+            th { 
+              color: red;
+            }
+          </style>
+          <h3>2022</h3><br><br>
+          <tr class="spaceUnder">
+            <th>Name</th>
+            <th>Rank</th>
+          </tr>
+          <tr class="spaceUnder">
+            <td>UTCTF 2022</td>
+            <td>440</td>
+          </tr>
+          <tr class="spaceUnder">
+            <td>DaVinciCTF 2022</td>
+            <td>381</td>
+          </tr>
+          <tr class="spaceUnder">
+            <td>Real World CTF 4th</td>
+            <td>906</td>
+          </tr>
+          <tr class="spaceUnder">
+            <td>KnightCTF 2022</td>
+            <td>614</td>
+          </tr>
+          <tr class="spaceUnder">
+            <td>KnightCTF 2022</td>
+            <td>614</td>
+          </tr>
+        </table>
+        <br><br>
+        <table>
+          <style type="text/css">
+            td {
+              padding: 0 15px;
+              text-align: center;
+              color: whitesmoke;
+            }
+            tr { 
+              padding: 0 15px;
+              text-align: center;
+            }
+            table, th, td {
+              padding: 5px;
+            }
+            table {
+              border-spacing: 15px;
+            }
+            th { 
+              color: red;
+            }
+            h3 { 
+              color: aqua;
+            }
+          </style>
+          <h3>2021</h3><br><br>
+          <tr class="spaceUnder">
+            <th>Name</th>
+            <th>Rank</th>
+          </tr>
+          <tr class="spaceUnder">
+            <td>Balsn CTF 2021</td>
+            <td>61</td>
+          </tr>
+          <tr class="spaceUnder">
+            <td>DamCTF 2021</td>
+            <td>196</td>
+          </tr>
+          <tr class="spaceUnder">
+            <td>Jornadas 2021</td>
+            <td>285</td>
+          </tr>
+          <tr class="spaceUnder">
+            <td>DEADFACE CTF</td>
+            <td>352</td>
+          </tr>
+        </table>
       </div>
     </div>
   </center>
